--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -20,8 +20,10 @@ time, mark, audio, video{
 	padding: 0;
 
 }
-
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+ul{
+	list-style: none;
 }
